WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287969
[GCC] LTO link failure in RTCDataChannel
https://bugs.webkit.org/show_bug.cgi?id=287969
Summary
[GCC] LTO link failure in RTCDataChannel
Philippe Normand
Reported
2025-02-19 09:48:06 PST
lto1: fatal error: missing resolution data for _ZTVN7WebCore14RTCDataChannelE Doesn't happen with clang/mold.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-02-19 09:50:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40864
EWS
Comment 2
2025-02-20 02:04:33 PST
Committed
290697@main
(6219b7641d97): <
https://commits.webkit.org/290697@main
> Reviewed commits have been landed. Closing PR #40864 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-20 02:05:16 PST
<
rdar://problem/145203961
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug