Cherry-pick 290697@main (6219b7641d97). https://bugs.webkit.org/show_bug.cgi?id=287969

[GCC] LTO link failure in RTCDataChannel
    https://bugs.webkit.org/show_bug.cgi?id=287969

    Reviewed by Adrian Perez de Castro.

    Add an empty virtual destructor to the RTCDataChannel class, so that gcc stops complaining at LTO
    link time about missing resolution data for _ZTVN7WebCore14RTCDataChannelE.

    * Source/WebCore/Modules/mediastream/RTCDataChannel.cpp:
    (WebCore::RTCDataChannel::~RTCDataChannel):
    * Source/WebCore/Modules/mediastream/RTCDataChannel.h:

    Canonical link: https://commits.webkit.org/290697@main

Canonical link: https://commits.webkit.org/282416.457@webkitglib/2.46